[package]
name = "push2"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "push2"
path = "src/lib.rs"

[dependencies]
midir = "0.10.3"
thiserror = "2.0.17"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
ron = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
rusb = "0.9.4"
slint = "1.14.1"

[build-dependencies]
slint-build = "1.14.1"
