[package]
name = "push2"
version = "0.1.0"
edition = "2024"

[lib]
name = "push2"
path = "src/lib.rs"

[dependencies]
midir = "0.10.3"
thiserror = "2.0.17"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
ron = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
rusb = "0.9.4"
dirs = "6.0.0"
log = "0.4.28"

[dev-dependencies]
env_logger = "0.11.8"
tokio = { version = "1.48.0", features = ["full"] }
pipewire = "0.9.2"
hound = "3.5.1"
